tests/NormalTests/paczka2/big_fuzzy/30721497.err
Error in line 2: 8jtfGtjAgF S711 38,9
Error in line 10: 74=S S711 61,1
Error in line 12: gxlDPSjf7iU S711 60,2
Error in line 13: gxlDPSjf7iU A382 68,1
Error in line 31: NutEiBDnmS A217 57,8
Error in line 33: NutEiBDnmS S711 5,8
Error in line 21: A382 S510 11,4
Error in line 39: A382 S711 7H,4
Error in line 41: gxlDPSjf7iU S711 85,9
Error in line 52: NutEiBDnmS S510 55,8
Error in line 55: NutEiBDnmS A382 70,5
Error in line 63: gxlDPSjf7iU S510 51,3
Error in line 62: 8jtfGtjAgF A382 33,4
Error in line 72: A382 S711 207,5
Error in line 78: Sp1lg S711 -1,3
Error in line 76: Sp1lg S711 70,3
Error in line 107: Sp1lg S510 -2,5
Error in line 106: 8jtfGtjAgF A217 22,5
Error in line 120: 8jtfGtjAgF S510 11,7
Error in line 122: wfJv A382 274,5
Error in line 128: wfJv A217 18,9
Error in line 136: Sp1lg S711 86,9
Error in line 131: wfJv A382 19,5
Error in line 150: wfJv A217 87,0
Error in line 125: NutEiBDnmS A382 117,7
Error in line 153: Sp1lg A217 84,6
Error in line 155: NutEiBDnmS S711 61,5
Error in line 161: NutEiBDnmS S510 28,7
Error in line 164: A382 S510 37,4
Error in line 163: NutEiBDnmS A217 15,2
Error in line 165: A382 S711 35,6
Error in line 152: wfJv A382 56,9
Error in line 170: wfJv S711 77,7
Error in line 172: Sp1lg S711 39,8
Error in line 174: gxlDPSjf7iU A382 51,3
Error in line 180: 74pS A217 15,60
Error in line 176: 74pS S510 88,7
Error in line 178: Sp1lg A382 35,9
Error in line 179: gxlDPSjf7iU A217 2,3
Error in line 197: 8jtfGtjAgF S510 17,13
Error in line 189: 8jtfGtjAgF S711 12,1
Error in line 202: wfJv S510 82,0
Error in line 209: A382 A382 3,7
Error in line 203: 74pS A217 178,6
Error in line 214: 74pS S510 41,3
Error in line 225: NutEiBDnmS A382 36,2
Error in line 229: NutEiBDnmS S711 85,6
Error in line 235: A382 A217 7,7
Error in line 241: 8jtfGtjAgF A217 78'2
